--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "^10.0.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "16.13.1",
+    "sass": "^1.32.5"
   }
 }
